# provman

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  valgrind.supp
doc/: Makefile.am  TODO.txt  coding-style.h  dbus.h  getting-started.h  mainpage.h
doc/doxygen/: Makefile.am  doxyfile.in
include/: error.h  log.h  map_file.h  plugin.h  utils.h
plugins/: eds.c  eds.h  ofono.c  ofono.h  synce.c  synce.h  utils_ofono.c  utils_ofono.h
src/: error.c  log.c  map_file.c  plugin-session.c  plugin-system.c  plugin.c  plugin_manager.c  plugin_manager.h  provman-session.c  provman-system.c  provman.c  provman.h  tasks.c  tasks.h  utils.c
src/session/: com.intel.provman.server.service.in
src/system/: com.intel.provman.server.service.in  provman.conf.in
testcases/: bad-set  create-apn  create-email  create-mms  create-sync  create-sync-eas  create-sync-no-source  create-sync-source-only  del-key-session  del-key-system  get-all-session  get-all-system  noop-session  noop-system  set-all
